syntax = "proto3";

package simpledb;

service SimpleDb {
    rpc ReadRPC(ReadMsg) returns (Entry);
    rpc ScanRPC(ReadMsg) returns (EntriesMsg);
    rpc UpdateRPC(Entry) returns (OkMsg);
    rpc InsertRPC(Entry) returns (OkMsg);
    rpc DeleteRPC(KeyMsg) returns (OkMsg);
}

message ReadMsg {
    string key = 1;
    repeated string attributes = 2;
}

message EntriesMsg { repeated Entry entries = 1; }

message Attribute {
    string name = 1;
    enum Type {
        BOOL = 0;
        INT = 1;
        UINT = 2;
        FLOAT = 3;
        STRING = 4;
        BYTES = 5;
    }
    Type type = 2;
    bytes value = 3;
}

message Entry {
    string key = 1;
    repeated Attribute attributes = 2;
}

message OkMsg { bool Ok = 1; }

message KeyMsg { string key = 1; }
